<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PantallaOpciones" >

    <Button
        android:id="@+id/op_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/op_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/op_2" />

    <Button
        android:id="@+id/op_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/op_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/op_3" />

    <Button
        android:id="@+id/op_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/op_3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/op_4" />

    <Button
        android:id="@+id/op_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="30dp"
        android:text="@string/op_1" />

</RelativeLayout>