<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Howards" >

    <ImageView
        android:id="@+id/imagen_partido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@+id/desc_imagen"
        android:src="@drawable/hogwarts" />

    <TextView
        android:id="@+id/nombre_partido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imagen_partido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/lbl_txt_partido"
        android:textSize="24sp"
        android:textColor="#F90000"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/titulo_ventana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#46B525"
        android:gravity="center"        
        android:layout_alignLeft="@+id/imagen_partido"
        android:layout_alignRight="@+id/imagen_partido"
        android:layout_alignTop="@+id/imagen_partido"
        android:text="@string/titulo_ventana" />

    <Button
        android:id="@+id/btn_candidato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imagen_partido"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_btn_candidato" />

</RelativeLayout>
