<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/copyright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="www.cyberfuel.com"
        android:textColor="#454545"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/leyenda_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leyenda_splash"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/leyenda_1" />

    <TextView
        android:id="@+id/leyenda_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/leyenda_splash" />

    <TextView
        android:id="@+id/leyenda_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leyenda_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/leyenda_2" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/leyenda_1"
        android:src="@drawable/logoulacit" />

</RelativeLayout>